@@ -1,5 +1,14 @@
 2005-02-11  Sven Neumann  <sven@gimp.org>
 
+	* configure.in: enable support for multiple processors by default.
+	Hyperthreading and multicore CPUs are becoming common and we
+	should try to give this as much testing as possible.
+
+	* app/config/gimpbaseconfig.c: use two processors by default. Also
+	increased default tile-cache-size to 256MB.
+
+2005-02-11  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimptoolbox.c (toolbox_paste_received): drop
 	everything after the first newline and strip leading and trailing
 	whitespace from the pasted text.
